--- a/gestion_de_farmacias/plantillas/editar_stock.html
+++ b/gestion_de_farmacias/plantillas/editar_stock.html
@@ -16,7 +16,7 @@
 		<p>{{usuario}}</p>
 	</div>
 
-	<div class="">
+	<div class="form-group col-md-10">
 	
 		{% if form.errors %}
 			<p style="color:red;">Por favor revisa este campo</p>
