--- a/gestion_de_farmacias/plantillas/medicamentos.html
+++ b/gestion_de_farmacias/plantillas/medicamentos.html
@@ -16,14 +16,14 @@
 		<p>{{usuario}}</p>
 	</div>
 
-        <div>
+	<div class="table-responsive">
 		<!-- ==============================-->
 		<!-- Tabla con los Medicamentos -->
 		<!-- ==============================-->
 		{% if medicamentos  %}
-			<table class="table table-hover">
+			<table table class="table table-hover">
                                 
-				<thead>
+				<thead class="thead-dark">
                                         <tr>
                                                 <th>Nombre Comercial</th>
                                                 <th>Categoria</th>
