--- a/gestion_de_farmacias/plantillas/nav.html
+++ b/gestion_de_farmacias/plantillas/nav.html
@@ -20,6 +20,7 @@
                               Inicio</a>
                        
                 </li>
+                &nbsp&nbsp
                 <li class="nav-item">
                         <a class="nav-link text-white" href="/medicamentos/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi d-block mx-auto mb-1e" viewBox="0 0 16 16">
@@ -28,6 +29,7 @@
                                       </svg>
                                 Medicamentos</a>
                 </li>
+                &nbsp&nbsp
                 <li class="nav-item">
                         <a class="nav-link text-white" href="/stock/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="i d-block mx-auto mb-1e" viewBox="0 0 16 16">
@@ -36,6 +38,7 @@
                                 Stock
                         </a>
                 </li>
+                &nbsp&nbsp
                 <!-- Stock Dropdown -->
                 <li class="nav-item dropdown">
                         <a class="nav-link  text-white" href="#" id="navbardrop" data-toggle="dropdown">
@@ -45,7 +48,7 @@
                               </svg>
                               Usuarios
                         </a>
-
+                        &nbsp&nbsp
                         <div class="dropdown-menu">
                                 <a class="dropdown-item" href="/lista_de_usuarios/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20   " fill="currentColor" class="bi bi  mx-auto mb-1e" viewBox="0 0 16 16">
@@ -63,8 +66,7 @@
                                 <a class="dropdown-item" href="#">Link 3</a>
                         </div>
                 </li>
-
-
+                &nbsp&nbsp
                 <li class="nav-item ">
                         <a class="nav-link text-white" href="/recetas/">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi d-block mx-auto mb-1e " viewBox="0 0 16 16">
@@ -73,7 +75,7 @@
                               </svg>
                               Recetas</a>
                 </li>
-
+                &nbsp&nbsp
         </ul>
         
          <ul class="navbar-nav ">
@@ -92,10 +94,11 @@
                                 </a>
                         </li>
                 {% endif %}
-
+                &nbsp&nbsp
                 <li class="nav-item">
                         <a class="nav-link text-white" href="/admin/">Admin</a>
                 </li>
+                &nbsp&nbsp
                 <li class="nav-item">
                         <a class="nav-link text-white" href="">{{user}}</a>
                 </li>
