--- a/gestion_de_farmacias/plantillas/recetas.html
+++ b/gestion_de_farmacias/plantillas/recetas.html
@@ -46,14 +46,14 @@
 	<hr>
 
 
-	<div>
+	<div class="table-responsive">
 		<!-- ==============================-->
 		<!-- Tabla con las recetas -->
 		<!-- ==============================-->
 		{% if recetas_list  %}
-			<table class="table table-hover">
+		<table class="table table-hover">
                                 
-				<thead>
+			<thead class="thead-dark">
                                         <tr>
                                                 <th>Medicamento</th>
                                                 <th>Paciente</th>
