--- a/gestion_de_farmacias/plantillas/registrar_usuario.html
+++ b/gestion_de_farmacias/plantillas/registrar_usuario.html
@@ -10,7 +10,7 @@
 {% block content %}
 	
 
-	<div class="">
+<div class="form-group form-group col-md-10">
 
 		{% if form.errors %}
 			<p style="color:red;">Por favor revisa este campo</p>
