--- a/gestion_de_farmacias/plantillas/editar_receta.html
+++ b/gestion_de_farmacias/plantillas/editar_receta.html
@@ -14,7 +14,7 @@
 		<p>{{usuario}}</p>
 	</div>
 
-	<div class="">
+	<div class="form-group col-md-10">
 	
 		{% if form.errors %}
 			<p style="color:red;">Por favor revisa los campos</p>
