--- a/gestion_de_farmacias/plantillas/lista_de_usuarios.html
+++ b/gestion_de_farmacias/plantillas/lista_de_usuarios.html
@@ -16,7 +16,7 @@
 		<p>{{request.user}}</p>
 	</div>
 
-	<div class="border p-3">
+	<div class="table-responsive">
 
 		<h3>Lista de Usuarios</h3>
 	
@@ -27,9 +27,9 @@
 		{% if object_list  %}
 			<table class="table table-hover">
                                 
-				<thead>
-                                        <tr>
-                                                <th>C.i.</th>
+				<thead class="thead-dark">
+                	<tr>
+                                                <th>C.I.</th>
                                                 <th>Rol</th>
                                                 <th>Usuario</th>
 						<th>Nombre</th>
@@ -48,8 +48,11 @@
                                                         <td>{{ usuario.nombre }}</td>
                                                         <td>{{ usuario.apellido }}</td>
 							<td>{{ usuario.telefono }}</td>
-							<td><a class="btn btn-sm btn-primary" href="/editar_usuario/{{ usuario.cedula_de_identidad }}">Editar</a></td>
-                                                </tr>
+							<td>
+								
+								<button type="button" class="btn btn-secondary" href="/editar_usuario/{{ usuario.cedula_de_identidad}}" >Editar</button>
+								</td>
+                    </tr>
                                         {% endfor %}
 				</tbody>
 
