--- a/gestion_de_farmacias/plantillas/mi_usuario.html
+++ b/gestion_de_farmacias/plantillas/mi_usuario.html
@@ -37,12 +37,12 @@
                                         <p>{{form.password1.label_tag}}{{form.password1}}</p>
                                         <p>{{form.password2.label_tag}}{{form.password2}}</p>
 
+					<p>si deseas cambiar tu contraseña has click <a href="{% url 'password_change' %}">aquí</a>.</p>
 				</div>
 			        <div class="card-footer">
 				        <input class="btn btn-primary" type="submit" value="Actualizar">
 			        </div>
 		        </form>
-
 	        </div>
         </div>
 	
