--- a/gestion_de_farmacias/plantillas/nav.html
+++ b/gestion_de_farmacias/plantillas/nav.html
@@ -99,7 +99,7 @@
                         </li>
 
                         <li class="nav-item">
-                                <a class="nav-link text-white" href="">{{user}}</a>
+                                <a class="nav-link text-white" href="{% url 'mi_usuario' %}">{{user}}</a>
                         </li>
                         {% endif %}
 
