--- a/gestion_de_farmacias/plantillas/medicamentos.html
+++ b/gestion_de_farmacias/plantillas/medicamentos.html
@@ -16,6 +16,14 @@
 		<p>{{usuario}}</p>
 	</div>
 
+	<div class="consulta medicamento">
+	<h3><p>Criterios de búsqueda</p></h3>		
+		<input type="text" class="form-control" id="cc-number" placeholder="Medicamento,Laboratorio,Número de Registro" required="">
+		<button class="btn btn-secondary btn-lg btn-block" type="submit">Buscar</button>
+	  </div>
+
+
+
 	<div class="table-responsive">
 		<!-- ==============================-->
 		<!-- Tabla con los Medicamentos -->
@@ -50,7 +58,7 @@
 				</tbody>
 
                         </table>
-		{% endif %}
+		{% endif %}	
 
 	</div>
 
