--- a/gestion_de_farmacias/plantillas/recetas.html
+++ b/gestion_de_farmacias/plantillas/recetas.html
@@ -35,7 +35,7 @@
 				</div>
 
 				<div class="card-footer">
-					<input class="btn btn-primary" type="submit" value="Crear">
+					<input class="btn btn-secondary btn-lg btn-block" type="submit" value="Crear">
 				</div>
 			</form>
 		</div>
