--- a/gestion_de_farmacias/plantillas/registrar_usuario.html
+++ b/gestion_de_farmacias/plantillas/registrar_usuario.html
@@ -10,7 +10,7 @@
 {% block content %}
 	
 
-<div class="form-group form-group col-md-10">
+<div class="form-group form-group col-md-12">
 
 		{% if form.errors %}
 			<p style="color:red;">Por favor revisa este campo</p>
@@ -28,7 +28,7 @@
 				</div>
 
 				<div class="card-footer">
-					<input class="btn btn-primary" type="submit" value="Registrar">
+					<input class="btn btn-secondary btn-lg btn-block" type="submit" value="Registrar">
 				</div>
 			</form>
 
