Cambio de diseño
afecta a todas las plantillas y a a los estillos

--- a/gestion_de_farmacias/plantillas/medicamentos.html
+++ b/gestion_de_farmacias/plantillas/medicamentos.html
@@ -17,7 +17,7 @@
             <p>Criterios de búsqueda</p>
         </h3>
         <input type="text" class="form-control mb-2" id="cc-number" placeholder="Medicamento, Laboratorio, Número de Registro" required="">
-        <button class="btn btn-secondary btn-lg btn-block" type="submit">Buscar</button>
+        <button class="btn btn-primary btn-lg btn-block" type="submit">Buscar</button>
     </div>
 
 
