--- a/gestion_de_farmacias/plantillas/mi_stock.html
+++ b/gestion_de_farmacias/plantillas/mi_stock.html
@@ -44,7 +44,7 @@
     <p style="color: red">Por favor revisa este campo</p>
     {% endif %}
 
-    <div id="formulario" class="card my-3">
+    <div id="formulario" class="form-group form-group col-md-12">
         <div class="card-header">
             <h3>Registrar stock</h3>
         </div>
@@ -55,7 +55,7 @@
                 {{formulario_nuevo_stock.as_p}}
             </div>
             <div class="card-footer">
-                <input class="btn btn-primary" type="submit" value="Registrar" />
+                <input class="btn btn-primary btn-lg btn-block" type="submit" value="Registrar" />
             </div>
         </form>
     </div>
