--- a/gestion_de_farmacias/plantillas/recetas_usuario.html
+++ b/gestion_de_farmacias/plantillas/recetas_usuario.html
@@ -41,7 +41,7 @@
                                                                 <td>{{ receta.vencimiento }}</td>
                                                                 <td>{{ receta.estado }}</td>
                                                                 {% comment %}
-                                                                <td><a class="btn btn-sm btn-danger" href="/mi_receta/{{ receta.id }}">Editar</a></td>
+                                                                <td><a class="btn btn-danger btn-lg btn-block" href="/mi_receta/{{ receta.id }}">Editar</a></td>
                                                                 {% endcomment %}
                                                         </tr>
                                                 {% endfor %}
