--- a/gestion_de_farmacias/plantillas/recetas.html
+++ b/gestion_de_farmacias/plantillas/recetas.html
@@ -51,7 +51,7 @@
     </div>
 
     <hr> {% if user.rol == 'medico'%}
-    <div class="">
+    <div class="form-group form-group col-md-12">
 
         {% if formulario_nueva_receta.errors %}
         <p style="color:red;">Por favor revisa este campo</p>
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="card-footer">
-                    <input class="btn btn-secondary btn-lg btn-block" type="submit" value="Crear">
+                    <input class="btn btn-primary btn-lg btn-block" type="submit" value="Crear">
                 </div>
             </form>
         </div>
