--- a/gestion_de_farmacias/plantillas/recetas.html
+++ b/gestion_de_farmacias/plantillas/recetas.html
@@ -2,9 +2,7 @@
 <!-- Contenido estatico de la pagina -->
 
 <!--Titulo de la pagina o pestaña-->
-{% block title %} Recetas {% endblock %} 
-
-{% block content %}
+{% block title %} Recetas {% endblock %} {% block content %}
 
 <!--Nav bar-->
 {% include "nav.html" %}
@@ -17,9 +15,9 @@
         <!-- Tabla con las recetas -->
         <!-- ==============================-->
         {% if recetas_list %}
-        <table class="table table-hover">
+        <table id="tabla_de_recetas" class="table table-hover">
 
-            <thead class="thead-dark">
+            <thead class="thead-darkk">
                 <tr>
                     <th>Medicamento</th>
                     <th>Paciente</th>
@@ -46,6 +44,10 @@
             </tbody>
 
         </table>
+        {% else %}
+        <div class="alert alert-warning">
+            <strong>Atencion!</strong>  No existen registros.
+        </div>
         {% endif %}
 
     </div>
