--- a/gestion_de_farmacias/plantillas/base.html
+++ b/gestion_de_farmacias/plantillas/base.html
@@ -26,8 +26,9 @@
 
     <!-- PLUGIN PARA EL BUSCADOR Y LA PAGINACION-->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.2/css/jquery.dataTables.min.css">
-    <script type="text/javascript" src="https://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>
-
+    <!--<script type="text/javascript" src="https://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>-->
+    <!--traduccion de la libreria al español-->
+    <script src="{% static 'jquery.dataTables.min.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'estilos.css' %}" />
 
