--- a/gestion_de_farmacias/plantillas/lista_de_usuarios.html
+++ b/gestion_de_farmacias/plantillas/lista_de_usuarios.html
@@ -15,6 +15,7 @@
     <!-- ==============================-->
     {% if object_list %}
 
+    {% comment %}
     <div class="consulta usuario mb-3">
         <h3>
             <p>Criterios de búsqueda</p>
@@ -22,11 +23,12 @@
         <input type="text" onkeyup="buscar_usuario()" id="usuario_buscado" class="form-control mb-2" id="cc-number" placeholder="c.i. ,  usuario, nombre, apellido" required="">
         <!--<button onclick="buscar_usuario()" class="btn btn-secondary btn-lg btn-block" type="submit">Buscar</button>-->
     </div>
+    {% endcomment %}
 
     <div class="table-responsive">
         <table id="tabla_de_usuarios" class="table table-hover">
 
-            <thead class="thead-dark">
+            <thead class="thead-darkk">
                 <tr>
                     <th>C.i.</th>
                     <th>Rol</th>
@@ -34,7 +36,7 @@
                     <th>Nombre</th>
                     <th>Apellido</th>
                     <th>Telefono</th>
-                    <th>...</th>
+                    <th>Ver</th>
                 </tr>
             </thead>
 
