modificaciones en los templates, se agrego una imagen al nav

--- a/gestion_de_farmacias/plantillas/lista_de_usuarios.html
+++ b/gestion_de_farmacias/plantillas/lista_de_usuarios.html
@@ -54,7 +54,7 @@
                     <td>{{ usuario.telefono }}</td>
                     
                     <td>
-                        <a   class="btn btn-primary btn-lg btn-block" href="/recetas_usuario/{{ usuario.cedula_de_identidad }}">Ver recetas</a></td> 
+                        <a   class="btn btn-primary btn-block" href="/recetas_usuario/{{ usuario.cedula_de_identidad }}">Ver recetas</a></td> 
                     </tr>
                 {% endfor %}
             </tbody>
