--- a/gestion_de_farmacias/plantillas/recetas_usuario.html
+++ b/gestion_de_farmacias/plantillas/recetas_usuario.html
@@ -30,16 +30,22 @@
 
             <tbody>
                 {% for receta in Recetas %}
+                {% if receta.estado == "RES" %}
+                <tr class="table-warning">
+                {% else %}
                 <tr>
+                {% endif %}
                     <td>{{ receta.principio_activo }}</td>
                     <td>{{ receta.paciente }}</td>
                     <td>{{ receta.medico }}</td>
                     <td>{{ receta.descripcion }}</td>
                     <td>{{ receta.vencimiento }}</td>
                     <td>{{ receta.estado }}</td>
-                    
-                    <td><a class="btn btn-danger btn-lg btn-block" href="/gestionar_receta/{{ receta.id }}">Gestionar</a></td>
-                    
+                    {% if receta.estado == "RES"  and  user.rol == "farmacia" %}
+                        <td><a class="btn btn-primary" href="/gestionar_receta/{{ receta.id }}">Gestionar</a></td>
+                    {% else %}
+                        <td><p></p></td>
+                    {% endif %}
                 </tr>
                 {% endfor %}
             </tbody>
