--- a/gestion_de_farmacias/plantillas/recetas.html
+++ b/gestion_de_farmacias/plantillas/recetas.html
@@ -27,6 +27,8 @@
                     <th>Estado</th>
                     {% if  user.rol == 'farmacia'%}
                     <th>Gestionar</th>
+                    {% else %}
+                    <th>...</th>
                     {% endif %}
                 </tr>
             </thead>
