--- a/gestion_de_farmacias/plantillas/mi_stock.html
+++ b/gestion_de_farmacias/plantillas/mi_stock.html
@@ -73,7 +73,8 @@
                     <th></th>
                     {% endcomment %}    
                     <th>Medicamento</th>
-                    <th>Principio activo</th>                    
+                    <th>Principio activo</th>        
+                    <th>Funcionario</th>             
                     <th>Vencimiento</th>
                     <th>Codigo</th>
                     <th></th>
@@ -98,6 +99,7 @@
                     {% endcomment %}
                     <td>{{lote.medicamento}}</td>
                     <td>{{lote.principio_activo}}</td>
+                    <td>{{lote.funcionario}}</td>
                     <td>{{lote.vencimiento}}</td>
                     <td>{{lote.id}}</td>
                     <td><a class="btn btn-sm btn-primary" href="/editar_stock/{{ lote.id }}">editar...</a></td>
