cambie la base de datos a mysql e hice la alerta para avisar que el usuario fue creado correctamente

--- a/gestion_de_farmacias/plantillas/farmacias.html
+++ b/gestion_de_farmacias/plantillas/farmacias.html
@@ -54,6 +54,10 @@
             </tbody>
 
         </table>
+        {% else %}
+        <div class="alert alert-warning">
+            <strong>Atencion!</strong>  No existen registros.
+        </div>
         {% endif %}
     </div>
 
