--- a/gestion_de_farmacias/plantillas/mi_usuario.html
+++ b/gestion_de_farmacias/plantillas/mi_usuario.html
@@ -10,19 +10,37 @@
 {% include "nav.html" %}
 
         <div class="m-3">
-	
-		{% if form.errors %}
-			<p style="color:red;">Por favor revisa los campos</p>
+
+		{% if 'editado_correctamente' in request.GET  and not form.errors %}
+			<div class="container">
+				<div class="alert alert-success">
+					<strong>Exito!</strong> Usuario editado correctamente.
+				</div>
+			</div>
 		{% endif %}
+	
 
 		<div class="form-group form-group col-md-12">
 			<div class="card-header">
 				<h3>Actulizar mi Usuario</h3>
 			</div>
 
+			
+
 			<form method="POST">{% csrf_token %}
 				<div class="card-body">
-					
+
+					{% if form.errors %}
+						<div class="container">
+							<div class="alert alert-warning">
+								<strong>Atencion!</strong> Por favor revisa los campos.
+							</div>
+						</div>
+					{% endif %}
+
+					{{form.as_p}}
+					{% comment %}
+						
                                         {% if request.user.is_authenticated and user.rol == "farmacia" %}
                                         <p>{{form.rol.label_tag}}{{form.rol}}</p>
                                         {% endif %}
@@ -34,6 +52,7 @@
                                         <p>{{form.telefono.label_tag}}{{form.telefono}}</p>
                                         <p>{{form.password1.label_tag}}{{form.password1}}</p>
                                         <p>{{form.password2.label_tag}}{{form.password2}}</p>
+					{% endcomment %}
 
 					<h5><p>si deseas cambiar tu contraseña has click <a class="colora" href="{% url 'password_change' %}">aquí</a>.</p></h5>
 				</div>
