--- a/gestion_de_farmacias/plantillas/recetas.html
+++ b/gestion_de_farmacias/plantillas/recetas.html
@@ -19,12 +19,11 @@
 
             <thead class="thead-darkk">
                 <tr>
+                    <th>Emitida el</th>
                     <th>Estado</th>
                     <th>Principio activo</th>
                     <th>Paciente</th>
-                    <th>Medico</th>
                     <th>Descripcion</th>
-                    <th>Vencimiento</th>
                     {% if  user.rol == 'farmacia'%}
                     <th>Gestionar</th>
                     {% else %}
@@ -35,17 +34,16 @@
 
             <tbody>
                 {% for receta in recetas_list %}
-                {% if receta.estado == "RES" %}
-                <tr class="table-warning">
-                {% else %}
-                <tr>
-                {% endif %}
+                    {% if receta.estado == "RES" %}
+                    <tr class="table-warning">
+                    {% else %}
+                    <tr>
+                    {% endif %}
+                    <td>{{ receta.created_at }}</td>
                     <td>{{ receta.estado }}</td>
                     <td>{{ receta.principio_activo }}</td>
                     <td>{{ receta.paciente }}</td>
-                    <td>{{ receta.medico }}</td>
                     <td>{{ receta.descripcion }}</td>
-                    <td>{{ receta.vencimiento }}</td>
                     {% comment %}
                     {% if  user.rol == 'medico'%}
                         <td><a class="btn btn-sm btn-primary" href="/editar_receta/{{ receta.id }}">Editar</a></td>    
